--- a/local/inputs.conf
+++ b/local/inputs.conf
@@ -1,7 +1,13 @@
-[script://$SPLUNK_HOME/etc/apps/lala/bin/setDeploymentClientNamefromTags]
+[script://$SPLUNK_HOME/etc/apps/TA-azure-deployment-client-name/bin/setDeploymentClientNamefromTags]
 sourcetype = getmeta
 index = main
 interval = 300
 start_by_shell = false
 python.version = default
 passAuth = admin
+
+#[powershell://setDeploymentClientNamefromTags]
+#script = . "$SplunkHome\etc\apps\TA-azure-deployment-client-name\bin\setDeploymentClientNamefromTags.ps1"
+#index = main
+#sourcetype = getmeta
+#schedule = */5 * * * *
